fix: UI issue on table contents which is overlapping layout on docs page.

--- a/src/templates/page.scss
+++ b/src/templates/page.scss
@@ -642,3 +642,17 @@ code[class*="language-"] {
 .fixed{
   display: none;
 }
+
+table{
+  thead, tbody{
+    @apply w-full;
+    tr{
+      td, th{
+        word-wrap: break-word;
+        li{
+          @apply break-all w-full;
+        }
+      }
+    }
+  }
+}
